--- a/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.Development.json
+++ b/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "BTCPay":{
+    "APIKey": "MvkoihHHlopivVZUvVBkWy0inQLBCidWZoU1E7HVDVP",
+    "Authorization": "TXZrb2loSEhsb3BpdlZaVXZWQmtXeTBpblFMQkNpZFdab1UxRTdIVkRWUA==",
+    "ServerURL": "https://testnet.demo.btcpayserver.org/stores/FkRSUeStjPEtNJPWEEvEJPUyVCL3KcG3D1PxbSpuQZpL"
   }
 }
