--- a/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.json
+++ b/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BTCPayServer": {
+    "APIKey": "iDBGldnrblLZh1CPynknQo07OhGkrMQvEd1QBiE1oU7",
+    "Authorization": "aURCR2xkbnJibExaaDFDUHlua25RbzA3T2hHa3JNUXZFZDFRQmlFMW9VNw==",
+    "ServerURL": "https://testnet.demo.btcpayserver.org/"
+  },
+  "ApplicationUrl": "https://localhost:7246/"
 }
