--- a/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo.csproj
+++ b/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BTCPayServer.Client" Version="1.7.2" />
+  </ItemGroup>
+
 </Project>
