Extract store Id to appconfig

--- a/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.json
+++ b/BitcoinPaymentIntegrationDemo/BitcoinPaymentIntegrationDemo/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "BTCPayServer": {
     "APIKey": "849fa7a82dba1ada4f9bcb47a3c961282a20be92",
-    "ServerURL": "https://testnet.demo.btcpayserver.org/"
+    "ServerURL": "https://testnet.demo.btcpayserver.org/",
+    "StoreId": "FkRSUeStjPEtNJPWEEvEJPUyVCL3KcG3D1PxbSpuQZpL"
   },
   "ApplicationUrl": "https://localhost:7246/"
 }
